--- a/.gitignore
+++ b/.gitignore
@@ -41,8 +41,9 @@ testem.log
 .DS_Store
 Thumbs.db
 
-/functions/venv/
-/.firebase/
+# Firebase
+.firebase
+*-debug.log
+.runtimeconfig.json
 
-/functions/venv
-/.firebase
+functions/venv/
