--- a/firebase.json
+++ b/firebase.json
@@ -16,8 +16,7 @@
         "venv",
         ".git",
         "firebase-debug.log",
-        "firebase-debug.*.log",
-        "*.local"
+        "firebase-debug.*.log"
       ],
       "predeploy": []
     }
